--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'Acorn';
-    src: url(../fonts/Acorn-SemiBold.ttf);
+  font-family: "Acorn";
+  src: url(../fonts/Acorn-SemiBold.ttf);
 }
 .navbar-container {
   background-color: #181823;
   color: #ffffff;
   width: 100%;
-  height: 88px;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,15 +18,21 @@
   height: 100%;
   padding-left: 72px;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.logo-div h1 {
-  font-family:'Acorn';
+.logo-div p {
+  font-family: "Acorn";
   font-weight: 700;
   color: #a8a8ab;
-  font-size: 1.8rem;
+  font-size: 2.3rem;
   width: auto;
-  letter-spacing: 1.5px;
+  letter-spacing: 5px;
+}
+.logo-div h6 {
+  color: #a8a8ab;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 .nav-menu {
   width: auto;
@@ -62,8 +68,8 @@
   color: #fff;
   background-color: #5221e671;
   font-weight: 700;
-  border-radius: 8px;
-  padding: 22px 24px;
+  border-radius: 0 0 6px;
+  padding: 34px 24px;
   font-size: 1rem;
   line-height: 100%;
   text-decoration: none;
