--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -18,22 +18,30 @@
 }
 .home-img-div {
   position: absolute;
-  width: 140%;
+  width: 135%;
   height: 85%;
   left: 0;
+  overflow: hidden;
 }
 
 .home-img-div img {
   width: 100%;
   height: 100%;
 }
+.mypic{
+  position: absolute;
+  right:60px;
+  top: 66px;
+  transform: scale(.8);
+  filter: opacity(.1);
+}
 
 .head-txt-container {
   position: absolute;
   right: 75px;
-  top: 200px;
-  width: 53%;
-  height: 70%;
+  top: 175px;
+  width: 55%;
+  height: 75%;
   display: flex;
   align-items: start;
   justify-content: center;
@@ -41,20 +49,23 @@
   z-index: 1;
 }
 .home-head-txt {
-  color: #e0e0e1;
+  color: #cbcbcb;
   font-family: "Acorn";
   font-size: 90px;
   font-weight: 700;
   line-height: 110px;
   letter-spacing: 5px;
 }
-
+.main-head{
+  letter-spacing: 8px;
+  font-size: 95px;
+}
 .sub-head {
   font-size: 80px;
   letter-spacing: 5px;
 }
 .sub-head2 {
-  color: #a8a8ab;
+  color: #7c7c7c;
 }
 .bottom-head {
   margin-top: 50px;
